duck/test/fail/arity.duck
main = testAll

_ = 1 :: Void
